--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@babel/core": "7.2.0",
     "parcel-bundler": "^1.6.1"
   },
+  "browserslist": [
+    "last 1 Chrome version"
+  ],
   "keywords": []
 }
